--- a/corrida.html
+++ b/corrida.html
@@ -15,7 +15,10 @@
             <a href="">Menu</a>
         </div>
         <div class="pistas">
-
+            <div class="pista-corrida">
+                <div class="partida"></div>
+                <div class="chegada"></div>
+            </div>
         </div>
     </div>
 </body>
