--- a/corrida.html
+++ b/corrida.html
@@ -10,16 +10,45 @@
 <body>
     <div class="jogo">
         <div class="menu-botoes">
-            <a href="">Nova corrida</a>
-            <a href="">Iniciar</a>
-            <a href="">Menu</a>
+            <a href="corrida.html">Nova corrida</a>
+            <a href="" onclick="iniciar()">Iniciar</a>
+            <a href="index.html">Menu</a>
         </div>
         <div class="pistas">
             <div class="pista-corrida">
-                <div class="partida"></div>
-                <div class="chegada"></div>
+                <div class="partida">1
+                    <img src="img/hatchbackSports.png" alt="" id="carro1">
+                </div>
+                <div class="chegada">
+                    <img src="img/chegada.jpg" alt="imagemChegada">
+                </div>
+            </div>
+            <div class="pista-corrida">
+                <div class="partida">2
+                    <img src="img/police.png" alt="" id="carro2">
+                </div>
+                <div class="chegada">
+                    <img src="img/chegada.jpg" alt="imagemChegada">
+                </div>
+            </div>
+            <div class="pista-corrida">
+                <div class="partida">3
+                    <img src="img/race.png" alt="" id="carro3">
+                </div>
+                <div class="chegada">
+                    <img src="img/chegada.jpg" alt="imagemChegada">
+                </div>
+            </div>
+            <div class="pista-corrida">
+                <div class="partida">4
+                    <img src="img/raceFuture.png" alt="" id="carro4">
+                </div>
+                <div class="chegada">
+                    <img src="img/chegada.jpg" alt="imagemChegada">
+                </div>
             </div>
         </div>
     </div>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
