--- a/corrida.html
+++ b/corrida.html
@@ -17,7 +17,7 @@
         <div class="pistas">
             <div class="pista-corrida">
                 <div class="partida">1
-                    <img src="img/hatchbackSports.png" alt="" id="carro1">
+                    <img src="img/veiculo01-removebg-preview.png" alt="" id="carro1">
                 </div>
                 <div class="chegada">
                     <img src="img/chegada.jpg" alt="imagemChegada">
@@ -25,7 +25,7 @@
             </div>
             <div class="pista-corrida">
                 <div class="partida">2
-                    <img src="img/police.png" alt="" id="carro2">
+                    <img src="img/veiculo03-removebg-preview.png" alt="" id="carro2">
                 </div>
                 <div class="chegada">
                     <img src="img/chegada.jpg" alt="imagemChegada">
@@ -33,7 +33,7 @@
             </div>
             <div class="pista-corrida">
                 <div class="partida">3
-                    <img src="img/race.png" alt="" id="carro3">
+                    <img src="img/veiculo04.png" alt="" id="carro3">
                 </div>
                 <div class="chegada">
                     <img src="img/chegada.jpg" alt="imagemChegada">
@@ -41,7 +41,7 @@
             </div>
             <div class="pista-corrida">
                 <div class="partida">4
-                    <img src="img/raceFuture.png" alt="" id="carro4">
+                    <img src="img/veiculo05.png" alt="" id="carro4">
                 </div>
                 <div class="chegada">
                     <img src="img/chegada.jpg" alt="imagemChegada">
