--- a/corrida.html
+++ b/corrida.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/corrida.css">
-    <script type="text/javascript"></script>
+    <script src="javascript/script.js"></script>
     <title>Corrida</title>
 </head>
 <body>
@@ -50,6 +50,9 @@
             </div>
         </div>
     </div>
-    <script src="javascript/script.js"></script>
+    <script type="text/javascript">
+        var crono = setInterval(function(){moveImage()},100)
+        var tempo = setCarro();
+    </script>
 </body>
 </html>
