--- a/corrida.html
+++ b/corrida.html
@@ -48,6 +48,10 @@
                 </div>
             </div>
         </div>
+        <div class="modal">
+            <h1>Escolha o veículo que irá ganhar</h1>
+            
+        </div>
     </div>
     <script src="javascript/script.js"></script>
 </body>
