--- a/corrida.html
+++ b/corrida.html
@@ -48,9 +48,10 @@
                 </div>
             </div>
         </div>
-        <div class="modal">
-            <h1>Escolha o veículo que irá ganhar</h1>
-            
+        <div class="modal-overaly">
+            <div class="modal">
+                <h1>Escolha o veículo que irá ganhar</h1>
+            </div>
         </div>
     </div>
     <script src="javascript/script.js"></script>
