--- a/corrida.html
+++ b/corrida.html
@@ -50,7 +50,11 @@
         </div>
         <div class="modal-overaly">
             <div class="modal">
-                <h1>Escolha o veículo que irá ganhar</h1>
+                <fieldset>
+                    <legend>Qual veículo irá ganhar</legend>
+                    <label for="carro1"></label>
+                    <input type="radio" id="carro1" name="carr01" value="1">
+                </fieldset>
             </div>
         </div>
     </div>
