--- a/corrida.html
+++ b/corrida.html
@@ -52,8 +52,17 @@
             <div class="modal">
                 <fieldset>
                     <legend>Qual veículo irá ganhar</legend>
-                    <label for="carro1"></label>
+                    <label for="carro1"><img src="img/veiculo01-removebg-preview.png" alt=""></label>
                     <input type="radio" id="carro1" name="carr01" value="1">
+
+                    <label for="carro2"><img src="img/veiculo03-removebg-preview.png" alt=""></label>
+                    <input type="radio" id="carro1" name="carr02" value="2">
+
+                    <label for="carro3"><img src="img/veiculo04.png" alt=""></label>
+                    <input type="radio" id="carro3" name="carr01" value="3">
+
+                    <label for="carro4"><img src="img/veiculo05.png" alt=""></label>
+                    <input type="radio" id="carro4" name="carr04" value="4">
                 </fieldset>
             </div>
         </div>
