--- a/corrida.html
+++ b/corrida.html
@@ -51,18 +51,26 @@
         <div class="modal-overaly">
             <div class="modal">
                 <fieldset>
-                    <legend>Qual veículo irá ganhar</legend>
-                    <label for="carro1"><img src="img/veiculo01-removebg-preview.png" alt=""></label>
-                    <input type="radio" id="carro1" name="carr01" value="1">
+                    <legend>Qual veículo irá ganhar?</legend>
+                    <div class="opcoes">
+                        <label for="veiculo1"><img src="img/veiculo01-removebg-preview.png" alt=""></label>
+                        <input checked type="radio" id="veiculo1" name="carro" value="1">
+                    </div>
 
-                    <label for="carro2"><img src="img/veiculo03-removebg-preview.png" alt=""></label>
-                    <input type="radio" id="carro1" name="carr02" value="2">
+                    <div class="opcoes">
+                        <label for="veiculo2"><img src="img/veiculo03-removebg-preview.png" alt=""></label>
+                        <input type="radio" id="veiculo2" name="carro" value="2">
+                    </div>
 
-                    <label for="carro3"><img src="img/veiculo04.png" alt=""></label>
-                    <input type="radio" id="carro3" name="carr01" value="3">
+                    <div class="opcoes">
+                        <label for="veiculo3"><img src="img/veiculo04.png" alt=""></label>
+                        <input type="radio" id="veiculo3" name="carro" value="3">
+                    </div class="opcoes">
 
-                    <label for="carro4"><img src="img/veiculo05.png" alt=""></label>
-                    <input type="radio" id="carro4" name="carr04" value="4">
+                    <div class="opcoes">
+                        <label for="veiculo4"><img src="img/veiculo05.png" alt=""></label>
+                        <input type="radio" id="veiculo4" name="carro" value="4">
+                    </div>
                 </fieldset>
             </div>
         </div>
