--- a/corrida.html
+++ b/corrida.html
@@ -72,6 +72,7 @@
                         <input type="radio" id="veiculo4" name="carro" value="4">
                     </div>
                 </fieldset>
+                <a href="#" id="btn-ini">Começar corrida</a>
             </div>
         </div>
     </div>
